--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "edit-json-file": "^1.6.0",
+    "primeicons": "^4.1.0",
+    "primereact": "^6.3.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
